--- a/index.html
+++ b/index.html
@@ -63,29 +63,22 @@
                 <div class="herotext">
                     <h1 class="Intro">I'm Madhav.<span style="color: #5F50CC; text-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.25) inset;"> I Design, Build and Scale Products.</span></h1>
                     <div class="current_role">
-                        <h1 style="color: #121212; font-size: 2rem; margin-bottom: 2rem;">Through research-driven design and strategic thinking.</h1>
+                        <h1 style="color: #121212; font-size: 2rem; margin-bottom: 1rem;">Through research-driven design and strategic thinking.</h1>
+                    </div>
+                    <div class="industries" style="margin-bottom: 2rem;">
+                        <p style="color: #121212; font-weight:bolder; font-style: italic;">Industries I have experience across...</p>
+                        <div class="industry_label_set">
+                            <p class="industry_label">SPORTS</p>
+                            <p class="industry_label">CONSUMER ELECTRONICS</p>
+                            <p class="industry_label">ENTERPRISE SAAS</p>
+                            <p class="industry_label">HEALTHCARE</p>
+                            <p class="industry_label">EDUCATION</p>
+                        </div>
                     </div>
                     <div style="justify-content: space-between;">
-                        <!-- <div class="projectcard">
-                            <img class="hero-img" src="assets/test-hero.svg" alt="" width="100%" height="100%" style="border-radius: 24px; max-height: 1000px;">
-                        </div> -->
-                        <!-- <div class="UTbox">
-                            <div>
-                                <img class="bevo" src="assets/bevo.svg" alt="">
-                            </div>
-                            <div class="ut_text">
-                                <h2 style="color: #535353; font-family: 'Beautiful Freak'; font-size: 1.5rem;">MS. Human-Computer Interaction + Product Management </h2>
-                            </div>
-                        </div> -->
-                        <div class="industries" style="margin-top: 1rem;">
-                            <p style="color: #121212; font-weight:bolder; font-style: italic;">Industries I have experience across...</p>
-                            <div class="industry_label_set">
-                                <p class="industry_label">SPORTS</p>
-                                <p class="industry_label">CONSUMER ELECTRONICS</p>
-                                <p class="industry_label">ENTERPRISE SAAS</p>
-                                <p class="industry_label">HEALTHCARE</p>
-                                <p class="industry_label">EDUCATION</p>
-                            </div>
+                        <div class="UTbox">
+                            <img class="bevo" src="assets/bevo.svg" alt="" style="margin: auto 0;">
+                            <p style="font-family: 'Beautiful Freak'; font-size: 1.5rem; margin-bottom: 0;" ><span style="color: #bf5700;">University of Texas at Austin </span><br>MS. Human-Computer Interaction <span style="color: #bf5700; letter-spacing: 4px; margin: 0%;">✦</span>Product Management </p>
                         </div>
                     </div>
                 </div>
