--- a/GC.html
+++ b/GC.html
@@ -52,7 +52,7 @@
     <ul class="menu">
         <!-- <li><a class="case-nav-links" href="index.html#hero">Home</a></li> -->
         <li><a class="case-nav-links" href="index.html#aboutme">About</a></li>
-        <li><a class="case-nav-links" href="https://docs.google.com/document/d/19FsNFSuKrXeuz6TPy-TKdp-y8XON6LNS/edit?usp=sharing&ouid=115135934378785602249&rtpof=true&sd=true"></i>Resume</a></li>
+        <li><a class="case-nav-links" href="resume.html" target="_blank"></i>Resume</a></li>
         <li><a class="case-nav-links" href="index.html#projects">Design Work</a></li>
         <!-- <li><a class="case-nav-links" href="#workexperience">Work Experience</a></li> -->
         <li style="margin: 0 0 0 1rem;"><a class="case-nav-links" href="mailto:madhav18897@utexas.edu">Contact</a></li>
@@ -64,7 +64,7 @@
 <div class="body">
 
     <div class="loader">
-        <h2 style="padding: 2%; color: #fff;" class="load-message">Loading, Please Wait...</h2>
+        <h2 style="padding: 2%; color: #fff; font-family: Gilroyextrabold;" class="load-message">Thanks For Your patience! <br> Prototypes and Images Take Time to Load 😅... </h2>
         
     </div>
 
@@ -100,22 +100,24 @@
 
             <div class="content-block">
                 <h2>What Does <span>GameChanger</span> Do?</h2>
-                <p>GameChanger provides mobile and web platforms that offer live scoring, stats, and streaming for youth and amateur sports teams, enabling players, coaches, and families to stay connected and engaged. For this project I worked with the team focused on furthering the success of the Volleyball offering at GC.</p>
+                <p>GameChanger provides mobile and web platforms for live scoring, stats, and streaming in youth sports. I collaborated with the Volleyball team to enhance its success.</p>
             </div>
 
 
             <div class="content-block">
+                <h1>Process</h1>
+                <p>GC's design team follows the Triple Diamond process—Discover, Define, Develop & Deliver, and Impact—to ensure continuous improvement through research, refinement, and real-world feedback.</p>
+                
+                <img class="affinity" src="GCassets/triplediamond.svg" alt="" loading="lazy">
                 <div class="case-study-container">
                     <div class="left-column">
                         <h1>The Context</h1>
-                        <h2>What I Worked On</h2>
-                        <p>This project began as a UI exploration to improve discoverability of the new Film Room feature for volleyball teams, enabling staff to analyze footage, mark key moments, and share them with others. We focused on small UI elements, like banners and tooltips, to address its hard-to-find placement across multiple tabs and beneath other content.</p>
-
-                        <h1>The Design Process</h1>
-                        <h2>The Triple Diamond</h2>
-                        <p>The Triple Diamond model is an extended design framework that builds on the Double Diamond approach. It includes three phases: Discover (research to understand the problem), Define (clarify and focus on a specific challenge), and Develop and Deliver (ideate, prototype, and implement solutions). The third diamond,Impact, emphasizes measuring outcomes and refining based on user feedback, creating a continuous cycle of improvement.</p>
+                        <h2>Putting a Lens on Discoverability</h2>
+                        <p>I aimed to improve the discoverability of the Film Room feature for volleyball teams by incorporating UI elements like banners and widgets.</p>
+                        <img class="affinity" src="GCassets/prototypeplay.svg" alt="" loading="lazy" width="80%">
                     </div>
                     <div class="right-column"><iframe width="100%" height="1000px" src="https://embed.figma.com/proto/lbNOfB0gafHczfqluE6mNZ/MV-GC-WORK?page-id=0%3A1&node-id=115-163985&node-type=frame&viewport=-3546%2C-10673%2C0.09&scaling=min-zoom&content-scaling=responsive&starting-point-node-id=115%3A163985&embed-host=share" loading="lazy" allowfullscreen ></iframe></div>
+                    <img src="GCassets/prototype.gif" alt="">
                 </div>
             </div>
 
@@ -126,11 +128,11 @@
                 <p style="margin-bottom: 2rem;">This project began as a UI exploration to draw attention to the newly launched Film Room feature, helping volleyball team staff analyze footage, mark key moments, and share them with players, coaches, or parents. We focused on small UI elements, like banners and tooltips, to address discoverability challenges, hypothesizing that the feature’s placement within multiple tabs and under other content made it hard to find.</p>
                 <div class="gridLR">
                     <div>
-                        <img class="affinity" src="GCassets/initialscreen2.svg" alt="" loading="lazy">
+                        <img class="affinity" src="GCassets/initialscreen2.svg" alt="" loading="lazy" style="width: 80%;">
                         <p style="color: #121212;">This from the team’s event or game page with a particular opponent (Rangeview Rangers in this case) and this page just contains full event videos and video clips from that particular game. Again, these can be clicked on and opened within film room.</p>
                     </div>
                     <div>
-                        <img class="affinity" src="GCassets/initialscreen1.svg" alt="" loading="lazy"> 
+                        <img class="affinity" src="GCassets/initialscreen1.svg" alt="" loading="lazy" style="width: 80%;"> 
                         <p style="color: #121212;">This screen is from the teams homepage where each of the videos can be clicked on and opened in Film Room. </p>   
                     </div>
                 </div> 
