--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <ul class="menu">
           <!-- <li><a class="case-nav-links" href="index.html">Home</a></li> -->
           <li><a class="case-nav-links" href="#aboutme">About</a></li>
-          <li><a class="case-nav-links" href="https://docs.google.com/document/d/19FsNFSuKrXeuz6TPy-TKdp-y8XON6LNS/edit?usp=sharing&ouid=115135934378785602249&rtpof=true&sd=true" target="_blank"></i>Resume</a></li>
+          <li><a class="case-nav-links" href="resume.html" target="_blank"></i>Resume</a></li>
           <li><a class="case-nav-links" href="#projects">Design Work</a></li>
           <li style="margin: 0 0 0 1rem;"><a class="case-nav-links" href="mailto:madhav18897@utexas.edu">Contact</a></li>
           <li><a class="social-icons" href="https://www.linkedin.com/in/madhav-varma/" target="_blank"><i class="fa-brands fa-linkedin fa-xl"></i></a></li>
