--- a/GC.html
+++ b/GC.html
@@ -66,7 +66,7 @@
     <p></p>
 </div>
 
-<div class="dummydiv" id="home" style="height: 5prem;"></div>
+<div class="dummydiv" id="home" style="height: 5rem;"></div>
 <div class="body">
 
     <div class="loader">
