--- a/index.html
+++ b/index.html
@@ -56,11 +56,8 @@
     <section id="hero" style="margin-top: 10%;">
             <div class="hero-container">
                 <div class="herotext">
-                    <h1 class="Intro">I'M MADHAV.<span style="color: #5F50CC; text-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.25) inset;"> <br> I DESIGN, BUILD, AND SCALE PRODUCTS</span></h1>
-                    <div class="current_role">
-                        <!-- <h1 style="color: #121212; font-size: 1.5rem; margin-bottom: 1rem;">Through research-driven design and strategic thinking.</h1> -->
-                    </div>
-                
+                    <h1 class="Intro"><span style="font-size: 4rem;">I'm Madhav.</span><span style="color: #5F50CC; text-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.25) inset;"> <br> I Design, Build, & Scale Products.</span></h1>
+                    <p>(yes, this portfolio is designed and coded by me...)</p>                
                 </div>
                 <div>    
                         <div class="UTbox">
@@ -69,7 +66,7 @@
                         </div>
                 </div>
             </div>
-            <div class="industries" >
+            <div class="industries">
                 <p style="color: #121212; font-weight:bolder; font-style: italic;">Industries I have experience across...</p>
                 <div class="industry_label_set">
                     <p class="industry_label">SPORTS</p>
