--- a/LastMinute.html
+++ b/LastMinute.html
@@ -48,10 +48,11 @@
     <ul class="menu">
         <!-- <li><a class="case-nav-links" href="index.html#hero">Home</a></li> -->
         <li><a class="case-nav-links" href="about.html">About</a></li>
-        <li><a class="case-nav-links" href="https://docs.google.com/document/d/19FsNFSuKrXeuz6TPy-TKdp-y8XON6LNS/edit?usp=sharing&ouid=115135934378785602249&rtpof=true&sd=true"></i>Resume</a></li>
+        <li><a class="case-nav-links" href="resume.html" target="_blank"></i>Resume <span style="font-family: 'beautiful freak';">↗</span></a></li>
         <li><a class="case-nav-links" href="index.html#projects">Design Work</a></li>
         <!-- <li><a class="case-nav-links" href="#workexperience">Work Experience</a></li> -->
-        <li style="margin: 0 0 0 1rem;"><a class="case-nav-links" href="mailto:madhav18897@utexas.edu">Contact</a></li>
+        <li><a class="case-nav-links" href="mailto:madhav18897@utexas.edu">Contact</a></li>
+        <li style="margin: 0rem;"><a class="social-icons" href="https://www.linkedin.com/in/madhav-varma/" target="_blank"><i class="fa-brands fa-linkedin fa-s"></i></a></li>
     </ul>
 
 
