--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
           <li><a class="case-nav-links" href="#aboutme">About</a></li>
           <li><a class="case-nav-links" href="resume.html" target="_blank"></i>Resume <span style="font-family: 'beautiful freak';">↗</span></a></li>
           <li><a class="case-nav-links" href="#projects">Design Work</a></li>
-          <li style="margin: 0 0 0 1rem;"><a class="case-nav-links" href="mailto:madhav18897@utexas.edu">Contact</a></li>
-          <li><a class="social-icons" href="https://www.linkedin.com/in/madhav-varma/" target="_blank"><i class="fa-brands fa-linkedin fa-xl"></i></a></li>
+          <li><a class="case-nav-links" href="mailto:madhav18897@utexas.edu">Contact</a></li>
+          <li style="margin: 0rem;"><a class="social-icons" href="https://www.linkedin.com/in/madhav-varma/" target="_blank"><i class="fa-brands fa-linkedin fa-xl"></i></a></li>
         </ul>
 
 
@@ -56,10 +56,11 @@
     <section id="hero" style="margin-top: 10%;">
             <div class="hero-container">
                 <div class="herotext">
-                    <h1 class="Intro"><span style="font-size: 4rem;">I'm Madhav.</span><span style="color: #5F50CC; text-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.25) inset;"> <br> I Design, Build, & Scale Products.</span></h1>
+                    <h1 class="Intro"><span style="font-size: 3.5rem;">I'm Madhav.</h1>
+                    <h1 class="Intro"  style="color: #5F50CC; margin: 0;"> I Design, Build, & Scale Products.</h1>    
                     <p>(yes, this portfolio is designed and coded by me...)</p>                
                 </div>
-                <div>    
+                <div class="hero-right-side">    
                         <div class="UTbox">
                             <img class="bevo" src="assets/bevo.svg" alt="" style="margin: auto 0;">
                             <p style="margin-bottom: 0; color: #121212;" > Human-Computer Interaction <br>Product Management </p>
