--- a/usability.html
+++ b/usability.html
@@ -46,12 +46,12 @@
     <div class='menu-button'></div>
     </label>
     <ul class="menu">
-        <!-- <li><a class="case-nav-links" href="index.html#hero">Home</a></li> -->
-        <li><a class="case-nav-links" href="about.html">About</a></li>
-        <li><a class="case-nav-links" href="resume.html" target="_blank"></i>Resume</a></li>
-        <li><a class="case-nav-links" href="index.html#projects">Design Work</a></li>
-        <!-- <li><a class="case-nav-links" href="#workexperience">Work Experience</a></li> -->
-        <li style="margin: 0 0 0 1rem;"><a class="case-nav-links" href="mailto:madhav18897@utexas.edu">Contact</a></li>
+        <!-- <li><a class="case-nav-links" href="index.html">Home</a></li> -->
+        <li><a class="case-nav-links" href="#aboutme">About</a></li>
+        <li><a class="case-nav-links" href="resume.html" target="_blank"></i>Resume <span style="font-family: 'beautiful freak';">↗</span></a></li>
+        <li><a class="case-nav-links" href="#projects">Design Work</a></li>
+        <li><a class="case-nav-links" href="mailto:madhav18897@utexas.edu">Contact</a></li>
+        <li style="margin: 0rem;"><a class="social-icons" href="https://www.linkedin.com/in/madhav-varma/" target="_blank"><i class="fa-brands fa-linkedin fa-s"></i></a></li>
     </ul>
 
 </section> 
