--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                     </div>
                     <div>
                         <h1 class="grey-caps-label" style="color: #bf5700; margin-bottom: 0.5rem;">The university of texas at Austin</h1>
-                        <h1 class="grey-caps-label" style="color: #121212; margin-bottom: 0.25em;">M.S Information Science</h1>
+                        <h1 class="grey-caps-label" style="color: #121212; margin-bottom: 0.25em;">M.S. Information Science</h1>
                         <h1 class="grey-caps-label">Human-Computer Interaction</h1>
                         <h1 class="grey-caps-label">Product Management</h1>
                     </div>
