--- a/GC.html
+++ b/GC.html
@@ -63,7 +63,12 @@
 </section> 
 
 <div class="cover">
-    <p></p>
+    <div style="padding: 1rem; background-color: #021644; border-radius: 1rem; box-shadow: 0 0 10px rgba(0, 0, 0, 0.5); position: relative; margin: 400px 10% 0% 10%">
+        <h1 style="color: #fff;">🎯 Impact</h1>
+        <h2 style="color: #fff;">
+            I Designed key UI elements, defined success criteria, and conducted two usability tests to optimize critical entry points, projected to increase feature engagement by 25%.
+        <h2>
+    </div>
 </div>
 
 <div class="dummydiv" id="home" style="height: 5rem;"></div>
