--- a/GCds.html
+++ b/GCds.html
@@ -60,9 +60,15 @@
 
 </section> 
 
-<div style="height: 480px; margin: 0; background-color: #f7f7f7; background-image: url(GCdsassets/cover.svg); background-repeat: none; background-size:cover;">
-    <p></p>
+<div style="height: 480px; margin: 0 0 3.5rem 0; background-color: #f7f7f7; background-image: url(GCdsassets/cover.svg); background-repeat: no-repeat; background-size: cover; display: flex; justify-content: center; align-items: center;">
+    <div style="padding: 1rem; background-color: #021644; border-radius: 1rem; box-shadow: 0 0 10px rgba(0, 0, 0, 0.5); position: relative; margin: 480px 10% 0% 10%">
+        <h1 style="color: #fff;">🎯 Impact</h1>
+        <h2 style="color: #fff;">
+            I transformed the web design system into a central resource, improving cross-functional collaboration, enhancing consistency across 50+ screens, and reducing handoff times by 40%.
+        </h2>
+    </div>
 </div>
+
 
 <div class="dummydiv" id="home" style="height: 5rem;"></div>
 <div class="body">
