--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
     <section class="top-nav" id="navbar">
         
         <div>
-            <a class="case-nav-links" href="#hero"><h1 style="font-size: large; color: #121212;" >Madhav Varma</h1></a>   
+            <!-- <a class="case-nav-links" href="#hero"><h1 style="font-size: large; color: #121212;" >Madhav Varma</h1></a>    -->
+            <a class="case-nav-links" href="#hero"><img src="assets/2025logo.svg" style="padding: 0 ; margin: 0;"></a> 
         </div>
         <input id="menu-toggle" type="checkbox" />
         <label class='menu-button-container' for="menu-toggle">
@@ -59,7 +60,7 @@
             <div class="hero-text">
                 <h1 class="grey-caps-label">ABOUT ME</h1>
                 <h1 class="big-text">Madhav Varma</h1> 
-                <p>I'm a Product Designer with experience creating, building, and scaling products in sports, consumer electronics, enterprise SaaS, and healthcare. With a strong foundation in Human-Computer Interaction, Product Management, and Engineering, I approach complex challenges with a user-centered and problem-solving mindset. <br><br> (Fun fact: I designed and coded this portfolio myself!)</p>  
+                <p>Product Designer with 4+ years of experience designing scalable, accessible, and intuitive digital products across industries. Passionate about end-to-end data-driven design and cross-functional collaboration to craft impactful, user-focused solutions. <br><br> (Fun fact: I designed and coded this portfolio myself!)</p>  
                 <div class="industry_label_set" style="margin-top: 2rem;">
                     <p class="industry_label">SPORTS</p>
                     <p class="industry_label">CONSUMER ELECTRONICS</p>
@@ -70,15 +71,16 @@
             </div>
             <div class="hero-right-side">   
                 <div class="UTbox">
-                    <div style="display: flex; flex-direction: row; gap: 1rem;">
+                    <!-- <div style="display: flex; flex-direction: row; gap: 1rem;">
                         <img class="bevo" src="assets/bevo.svg" alt="" style="margin: auto 0;">
                         <img class="bevo" src="assets/grad.svg" alt="" style="margin: auto 0; background-color: #f7f7f7;">
-                    </div>
+                    </div> -->
                     <div>
-                        <h1 class="grey-caps-label" style="color: #bf5700; margin-bottom: 0.5rem;">The university of texas at Austin</h1>
+                        <img style="max-width: 80vw;" src="assets/Hero-img-2025.svg" alt="" loading="lazy">
+                        <!-- <h1 class="grey-caps-label" style="color: #bf5700; margin-bottom: 0.5rem;">The university of texas at Austin</h1>
                         <h1 class="grey-caps-label" style="color: #121212; margin-bottom: 0.25em;">M.S. Information Science</h1>
                         <h1 class="grey-caps-label">Human-Computer Interaction</h1>
-                        <h1 class="grey-caps-label">Product Management</h1>
+                        <h1 class="grey-caps-label">Product Management</h1> -->
                     </div>
                 </div>
             </div>
@@ -94,6 +96,7 @@
         <div class="tab-container">
             <button class="tab-button active" onclick="openTab('industry')">INDUSTRY PROJECTS</button>
             <button class="tab-button" onclick="openTab('academic')">ACADEMIC PROJECTS</button>
+            <!-- <button class="tab-button" onclick="openTab('academic')">PRODUCTS I'M BUILDING...</button> -->
         </div>
             
             <div id="industry" class="tab-content">
