--- a/GCds.html
+++ b/GCds.html
@@ -43,22 +43,25 @@
 <section class="top-nav" id="navbar">
         
     <div>
-        <a class="case-nav-links" href="index.html"><h1 style="font-size: large; color: #121212;" >Madhav Varma</h1></a>   
+        <!-- <a class="case-nav-links" href="#hero"><h1 style="font-size: large; color: #121212;" >Madhav Varma</h1></a>    -->
+        <a class="case-nav-links" href="#hero"><img src="assets/2025logo.svg" style="padding: 0 ; margin: 0;"></a> 
     </div>
     <input id="menu-toggle" type="checkbox" />
     <label class='menu-button-container' for="menu-toggle">
     <div class='menu-button'></div>
     </label>
     <ul class="menu">
-        <!-- <li><a class="case-nav-links" href="index.html">Home</a></li> -->
-        <li><a class="case-nav-links" href="#aboutme">About</a></li>
-        <li><a class="case-nav-links" href="resume.html" target="_blank"></i>Resume <span style="font-family: 'beautiful freak';">↗</span></a></li>
-        <li><a class="case-nav-links" href="#projects">Design Work</a></li>
-        <li><a class="case-nav-links" href="mailto:madhav18897@utexas.edu">Contact</a></li>
-        <li style="margin: 0rem;"><a class="social-icons" href="https://www.linkedin.com/in/madhav-varma/" target="_blank"><i class="fa-brands fa-linkedin fa-s"></i></a></li>
+      <!-- <li><a class="case-nav-links" href="index.html">Home</a></li> -->
+      <li><a class="case-nav-links" href="#hero">About</a></li>
+      <li><a class="case-nav-links" href="resume.html" target="_blank"></i>Resume <span style="font-family: 'beautiful freak';">↗</span></a></li>
+      <li><a class="case-nav-links" href="#projects">Design Work</a></li>
+      <li><a class="case-nav-links" href="mailto:madhav18897@utexas.edu">Contact</a></li>
+      <li style="margin: 0rem;"><a class="social-icons" href="https://www.linkedin.com/in/madhav-varma/" target="_blank"><i class="fa-brands fa-linkedin fa-xl"></i></a></li>
     </ul>
 
-</section> 
+
+</section>   
+
 
 <div style="height: 480px; margin: 0 0 3.5rem 0; background-color: #f7f7f7; background-image: url(GCdsassets/cover.svg); background-repeat: no-repeat; background-size: cover; display: flex; justify-content: center; align-items: center;">
     <div style="padding: 1rem; background-color: #021644; border-radius: 1rem; box-shadow: 0 0 10px rgba(0, 0, 0, 0.5); position: relative; margin: 480px 10% 0% 10%">
