--- a/GC.html
+++ b/GC.html
@@ -359,7 +359,7 @@
 
             <div class="content-block">
                 <h1 style="margin-bottom: 1.5rem;">A Quick Recap Before We Move Forward</h1>
-                <div class="gridLR" style="grid-template-columns: 1fr 1fr 1fr;">
+                <div class="gridLR">
                     <div>
                         <h2 class="sticky_note">There is a need to improve discoverability through UI elements to guide users to Film Room. </h2>
                         <p style="margin-top: 1rem;">There is additional need to improve discoverability (scored 3.8/5), and this can be improved with UI elements to guide users to Film Room.</p>
