--- a/GC.html
+++ b/GC.html
@@ -15,7 +15,7 @@
     </script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="GC.css">
-    <link rel="icon" href="MVLOGO.png">
+    <link rel="icon" href="assets/2025logo.svg">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="shortcut icon" type="image/jpg" href="assets/favicon.jpg"/>
