--- a/resume.html
+++ b/resume.html
@@ -35,7 +35,7 @@
     
     <section id="pdfembed" style="margin: auto;">
         <div style="display: flex;">
-            <embed src="assets/Madhav_Varma_Visual_2.24.25.pdf" width="100%" height="1440px" type="application/pdf" loading="lazy">    
+            <embed src="assets/Madhav_Varma_Visual.pdf" width="100%" height="1440px" type="application/pdf" loading="lazy">    
         </div>     
     </section>
 
