--- a/index.html
+++ b/index.html
@@ -58,11 +58,11 @@
     <section id="hero">
         <div class="hero-container">
             <div class="hero-text">
-                <h1 class="grey-caps-label">ABOUT ME</h1>
+                <h1 class="grey-caps-label" style="margin-bottom: 0.5rem;">ABOUT ME</h1>
                 <h1 class="big-text">Madhav Varma</h1> 
-                <p>Product Designer with 4+ years of experience designing scalable, accessible, and intuitive digital products across industries. Passionate about end-to-end data-driven design and cross-functional collaboration to craft impactful, user-focused solutions. <br><br> (Fun fact: I designed and coded this portfolio myself!)</p>  
+                <p style="margin-top: 1rem;">Product Designer with 4+ years of experience designing scalable, accessible, and intuitive digital products across industries. Passionate about end-to-end data-driven design and cross-functional collaboration to craft impactful, user-focused solutions. <br><br> (Fun fact: I designed and coded this portfolio myself!)</p>  
                 <div class="industry_label_set" style="margin-top: 2rem;">
-                    <p class="industry_label">SPORTS</p>
+                    <p class="industry_label">SPORTS TECH</p>
                     <p class="industry_label">CONSUMER ELECTRONICS</p>
                     <p class="industry_label">ENTERPRISE SAAS</p>
                     <p class="industry_label">HEALTHCARE</p>
