--- a/resume.html
+++ b/resume.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
     <title>Resume : Madhav Varma</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
@@ -33,18 +33,9 @@
 <body>
 
     
-    <section id="pdfembed" style="margin: auto;">
-        <div style="display: flex;">
-            <embed src="assets/Madhav_Varma_Visual.pdf" width="100%" height="1440px" type="application/pdf" loading="lazy">    
-        </div>     
+    <section section id="pdfembed" style="display: flex; justify-content: center; align-items: center; width: 100vw; height: 100vh;">
+            <iframe src="assets/Madhav_Varma_Visual.pdf" style="width: 100%; height: 100vh; border: none;" loading="lazy"></iframe>
     </section>
-
-    <!-- <section>
-        <div class="graphicresume" style="margin: 10%;">
-            <h1>Graphic Resume</h1>
-        </div>
-
-    </section> -->
 
 
 </body>
