--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                         <div class="projectcardtext">
                             <h1 style="font-size: 1rem; letter-spacing: 1.6px; color: #666666;">CONTRACT (FULL TIME)</h1>
                             <p class="industry_label">SPORTS</p>
-                            <h1 style="font-size: 1.5rem;">GameChanger by Dick's Sporting Goods : Film Room Research </h1>
+                            <h1 style="font-size: 1.5rem;">GameChanger by Dick's Sporting Goods : Film Room Research & Design</h1>
                             <p class="projectcarddetails">Designed and tested critical entry points for the film analysis feature, projected to increase participation by 25%.</p>
                             
                             <div class="buttons">
