--- a/LastMinute.html
+++ b/LastMinute.html
@@ -21,7 +21,7 @@
     <link rel="shortcut icon" type="image/jpg" href="assets/favicon.jpg"/>
     <link href="https://fonts.googleapis.com/css2?family=Manrope&family=Montserrat&family=Sacramento&display=swap"
         rel="stylesheet">
-
+    <script src="script.js"></script>
     <script src="https://kit.fontawesome.com/97869109ad.js" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/yourcode.js" crossorigin="anonymous"></script>
     
@@ -51,6 +51,7 @@
       <li><a class="case-nav-links" href="#hero">About</a></li>
       <li><a class="case-nav-links" href="resume.html" target="_blank"></i>Resume <span style="font-family: 'beautiful freak';">↗</span></a></li>
       <li><a class="case-nav-links" href="#projects">Design Work</a></li>
+      <li><a class="case-nav-links" href="freelance.html">Freelance Work</a></li>
       <li><a class="case-nav-links" href="mailto:madhav18897@utexas.edu">Contact</a></li>
       <li style="margin: 0rem;"><a class="social-icons" href="https://www.linkedin.com/in/madhav-varma/" target="_blank"><i class="fa-brands fa-linkedin fa-l"></i></a></li>
     </ul>
