--- a/GC.html
+++ b/GC.html
@@ -56,6 +56,7 @@
       <li><a class="case-nav-links" href="#hero">About</a></li>
       <li><a class="case-nav-links" href="resume.html" target="_blank"></i>Resume <span style="font-family: 'beautiful freak';">↗</span></a></li>
       <li><a class="case-nav-links" href="#projects">Design Work</a></li>
+      <li><a class="case-nav-links" href="freelance.html">Freelance Work</a></li>
       <li><a class="case-nav-links" href="mailto:madhav18897@utexas.edu">Contact</a></li>
       <li style="margin: 0rem;"><a class="social-icons" href="https://www.linkedin.com/in/madhav-varma/" target="_blank"><i class="fa-brands fa-linkedin fa-l"></i></a></li>
     </ul>
