--- a/freelance.html
+++ b/freelance.html
@@ -84,7 +84,7 @@
             <h2 style="padding-bottom: 2rem;">Digital Transformation of <a href="https://collegeconnectedusa.com/"> collegeconnectedusa.com</a></h2>
         </div>
         <div>
-            <video width="100%" autoplay muted loop controls style="border: none; border-radius: 24px;">
+            <video width="100%" autoplay muted loop controls style="border: none; border-radius: 24px;" loading="lazy">
                 <source src="assets/CCtransform.mp4" type="video/mp4" style="border: none; border-radius:24px">
             </video>
         </div>
