--- a/freelance.html
+++ b/freelance.html
@@ -32,7 +32,7 @@
 </head>
 <body>
     <my-navbar></my-navbar>
-    <section id="profile">
+    <section id="section-1">
         <div class="grid-container">
             <div>
                 <iframe width="100%" height="560px" style="border-radius: 32px; border: 12px solid #000000;" 
@@ -121,17 +121,32 @@
 
 <style>
 
-    #profile{
+    #section-1{
         padding: 10%;
     }
+
+    .primarybtn,.secondaybtn{
+        display: inline-flex;
+    }
+  
    
     @media (max-width: 900px) {
  
-        #profile{
-          padding-top: 30%;
+        #section-1{
+          padding-top: 20%;
+        }
+
+        .primarybtn,.secondaybtn{
+            display: flex;
+            width: 100%;
+        }
+
+        a{
+            width: 100%;
         }
       
       }
+
 </style>
 
 </html>
