--- a/freelance.html
+++ b/freelance.html
@@ -196,6 +196,12 @@
       
       }
 
+    @media (min-width:1800px)  {
+        .grid-container{
+            grid-template-columns: 1fr 2fr;
+        }
+    }
+
 </style>
 
 </html>
