--- a/GCds.html
+++ b/GCds.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="GCds.css">
     <link rel="icon" href="MVLOGO.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link href="https://fonts.googleapis.com/css2?family=Inter+Tight:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="shortcut icon" type="image/jpg" href="assets/favicon.jpg"/>
     <link href="https://fonts.googleapis.com/css2?family=Manrope&family=Montserrat&family=Sacramento&display=swap"
@@ -64,12 +65,21 @@
 </section>   
 
 
-<div style="height: 480px; margin: 0 0 3.5rem 0; background-color: #f7f7f7; background-image: url(GCdsassets/cover.svg); background-repeat: no-repeat; background-size: cover; display: flex; justify-content: center; align-items: center;">
+<!-- <div style="height: 480px; margin: 0 0 3.5rem 0; background-color: #f7f7f7; background-image: url(GCdsassets/cover.svg); background-repeat: no-repeat; background-size: cover; display: flex; justify-content: center; align-items: center;">
     <div style="padding: 1rem; background-color: #021644; border-radius: 1rem; box-shadow: 0 0 10px rgba(0, 0, 0, 0.5); position: relative; margin: 480px 10% 0% 10%">
         <h1 style="color: #fff;">🎯 Impact</h1>
         <h2 style="color: #fff;">
             I transformed the web design system into a central resource, improving cross-functional collaboration, enhancing consistency across 50+ screens, and reducing handoff times by 40%.
         </h2>
+    </div>
+</div> -->
+
+<div class="cover">
+    <div style="padding: 1.5rem; background-color: #021644; border-radius: 1rem; box-shadow: 0 0 10px rgba(0, 0, 0, 0.5); position: relative; margin: 400px 10% 0% 10%">
+        <h1 style="color: #fff;">🎯 Impact</h1>
+        <h2 style="color: #fff;">
+            I Designed key UI elements, defined success criteria, and conducted two usability tests to optimize critical entry points, projected to increase feature engagement by 25%.
+        <h2>
     </div>
 </div>
 
@@ -94,7 +104,7 @@
                 <a class="side-nav-list-item" href="#implementation">Implementation</a>
                 <a class="side-nav-list-item" href="#impact">Impact</a>
                   
-                <a class="side-nav-list-item" href="#home">Back to top</a>
+                <a class="side-nav-list-item" href="#home" style="color:#5F50CC;">Back to top</a>
             </div>
 
         </div>
@@ -208,7 +218,7 @@
                 <button class="primarybtn"><a class="button-link" href="https://www.figma.com/design/lbNOfB0gafHczfqluE6mNZ/MV-GC-WORK?node-id=2837-34582&t=MEqsuMpkiSJQE3jk-11" target="_blank"><i class="fa-brands fa-figma"></i> Click to Explore in Figma</a></button>   
             </div>
 
-            <div class="dummydiv" id="problem1" style="height: 56px;"></div>
+            <div class="dummydiv" style="height: 56px;"></div>
             <div class="content-block">
                 <h1>Examples of Important Components</h1>
                 <h2 style="color: #808080; margin-bottom: 2rem;">What they are, how they work, and why they are important</h2>
@@ -328,7 +338,7 @@
             </div>
 
             
-            <div class="dummydiv" id="problem1" style="height: 56px;"></div>
+            <div class="dummydiv" style="height: 56px;"></div>
             <div class="content-block">
                 <h1>Reflections</h1>
                 <h2>What I Learned</h2>
