--- a/CDSS.html
+++ b/CDSS.html
@@ -16,11 +16,12 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="CDSS.css">
     <link rel="icon" href="assets/2025logo.svg">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="shortcut icon" type="image/jpg" href="assets/favicon.jpg"/>
     <link href="https://fonts.googleapis.com/css2?family=Manrope&family=Montserrat&family=Sacramento&display=swap"
         rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link href="https://fonts.googleapis.com/css2?family=Inter+Tight:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">    
     <script src="script.js"></script>
     <script src="https://kit.fontawesome.com/97869109ad.js" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/yourcode.js" crossorigin="anonymous"></script>
@@ -52,10 +53,10 @@
         </label>
         <ul class="menu">
           <!-- <li><a class="case-nav-links" href="index.html">Home</a></li> -->
-          <li><a class="case-nav-links" href="#hero">About</a></li>
+          <!-- <li><a class="case-nav-links" href="#hero">About</a></li> -->
           <li><a class="case-nav-links" href="resume.html" target="_blank"></i>Resume <span style="font-family: 'beautiful freak';">↗</span></a></li>
           <li><a class="case-nav-links" href="#projects">Design Work</a></li>
-          <li><a class="case-nav-links" href="freelance.html">Freelance Work</a></li>
+          <li><a class="case-nav-links" href="freelance.html">Freelance</a></li>
           <li><a class="case-nav-links" href="mailto:madhav18897@utexas.edu">Contact</a></li>
           <li style="margin: 0rem;"><a class="social-icons" href="https://www.linkedin.com/in/madhav-varma/" target="_blank"><i class="fa-brands fa-linkedin fa-l"></i></a></li>
         </ul>
@@ -63,7 +64,16 @@
     
     </section>   
 
-<div class="dummydiv" id="home" style="height: 120px;"></div>
+    <div class="cover">
+        <div style="padding: 1.5rem; background-color: #021644; border-radius: 1rem; box-shadow: 0 0 10px rgba(0, 0, 0, 0.5); position: relative; margin: 400px 10% 0% 10%">
+            <h1 style="color: #fff;">🎯 Impact</h1>
+            <h2 style="color: #fff;">
+                Designed and prototyped a clinical decision support system (CDSS) using behavior change theory, enhancing RDN decision-making and patient nutrition education—earning the Dean’s Choice Award.
+            <h2>
+        </div>
+    </div>    
+
+<div class="dummydiv" id="home" style="height: 80px;"></div>
 <div class="body">
 
     <div class="loader">
@@ -82,8 +92,8 @@
                 <a class="side-nav-list-item" href="#research">Research</a>
                 <a class="side-nav-list-item" href="#design_process">Design Process</a>
                 <a class="side-nav-list-item" href="#user_testing">User Testing</a>
-                <a class="side-nav-list-item" href="#award">Award and Recognition</a>
-                <a class="side-nav-list-item" href="#home">Back to top</a>
+                <a class="side-nav-list-item" href="#award">Award & Recognition</a>
+                <a class="side-nav-list-item" href="#home" style="color:#5F50CC;">Back to top</a>
             </div>
 
         </div>
