--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         </label>
         <ul class="menu">
           <!-- <li><a class="case-nav-links" href="index.html">Home</a></li> -->
-          <li><a class="case-nav-links" href="#hero">About</a></li>
+          <!-- <li><a class="case-nav-links" href="#hero">About</a></li> -->
           <li><a class="case-nav-links" href="https://drive.google.com/file/d/1w-J6ykbAJ1cNtGrv02TxSAX7FrycYolq/view?usp=sharing" target="_blank"></i>Resume <span style="font-family: 'beautiful freak';">↗</span></a></li>
           <li><a class="case-nav-links" href="#projects">Design Work</a></li>
           <li><a class="case-nav-links" href="freelance.html">Freelance</a></li>
