--- a/GC.html
+++ b/GC.html
@@ -54,7 +54,7 @@
     </label>
     <ul class="menu">
       <!-- <li><a class="case-nav-links" href="index.html">Home</a></li> -->
-      <li><a class="case-nav-links" href="index.html#hero">About</a></li>
+      <!-- <li><a class="case-nav-links" href="index.html#hero">About</a></li> -->
       <li><a class="case-nav-links" href="resume.html" target="_blank"></i>Resume <span style="font-family: 'beautiful freak';">↗</span></a></li>
       <li><a class="case-nav-links" href="#projects">Design Work</a></li>
       <li><a class="case-nav-links" href="freelance.html">Freelance Work</a></li>
