--- a/CDSS.html
+++ b/CDSS.html
@@ -45,7 +45,7 @@
         
         <div>
             <!-- <a class="case-nav-links" href="#hero"><h1 style="font-size: large; color: #121212;" >Madhav Varma</h1></a>    -->
-            <a class="case-nav-links" href="#index.html"><img src="assets/2025logo.svg" style="padding: 0 ; margin: 0;"></a> 
+            <a class="case-nav-links" href="index.html"><img src="assets/2025logo.svg" style="padding: 0 ; margin: 0;"></a> 
         </div>
         <input id="menu-toggle" type="checkbox" />
         <label class='menu-button-container' for="menu-toggle">
@@ -73,7 +73,7 @@
         </div>
     </div>    
 
-<div class="dummydiv" id="home" style="height: 80px;"></div>
+<div class="dummydiv" id="home" style="height: 24px;"></div>
 <div class="body">
 
     <div class="loader">
