--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
             <div>
                 <h1 class="big-text" style="margin-bottom: 2rem; color: #808080; text-transform: lowercase;"><span style="text-transform: capitalize;">I</span> stay inspired through <span style="color: #ececec;">music, sports</span>, and exploring the <span style="color: #ececec;">outdoors.</span></h1>
                 <div class="hero-container" style="gap: 3rem;">
-                    <iframe class="youtubeembed" width="100%" height="400px" src="https://www.youtube.com/embed/W-JktjQgaqY?si=P_ORaDl5djiv_rQH" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen style="border-radius: 1.5rem;" ></iframe>
+                    <iframe class="youtubeembed" width="100%" height="400px" src="https://www.youtube.com/embed/W-JktjQgaqY?si=cKchzC3ezFM1L31v&amp;start=38"  title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen style="border-radius: 1.5rem;" ></iframe>
                     <div class="projectcard">
                         <div class="projectcardtext" style="gap: 0.5rem;">
                             <h1 class="grey-caps-label">YOUTUBE CHANNEL</h1>
