--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
             
     </section>
 
-    <section id="youtube">
+    <!-- <section id="youtube">
             <div>
                 <h1 class="big-text" style="margin-bottom: 2rem; color: #808080; text-transform: lowercase;"><span style="text-transform: capitalize;">I</span> stay inspired through <span style="color: #ececec;">music, sports</span>, and exploring the <span style="color: #ececec;">outdoors.</span></h1>
                 <div class="hero-container" style="gap: 3rem;">
@@ -310,7 +310,7 @@
                     </div>
                 </div>
             </div>         
-    </section>
+    </section> -->
 
     <!-- <img src="assets/Line 81.svg" alt="" style="width: 100%;"> -->
 
