--- a/GC.html
+++ b/GC.html
@@ -22,6 +22,7 @@
         rel="stylesheet">
      <link rel="preconnect" href="https://fonts.googleapis.com">
     <link href="https://fonts.googleapis.com/css2?family=Inter+Tight:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <script src="https://unpkg.com/scrollreveal"></script>
     <script src="script.js"></script>
     <script src="https://kit.fontawesome.com/97869109ad.js" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/yourcode.js" crossorigin="anonymous"></script>
@@ -130,7 +131,7 @@
                         <p>I aimed to improve the discoverability of the Film Room feature for volleyball teams by incorporating UI elements like banners and widgets.</p>
                         <img class="affinity prototypeplay" src="GCassets/prototypeplay.svg" alt="" loading="lazy" width="80%">
                     </div>
-                    <div class="right-column"><iframe width="100%" height="1000px" src="https://embed.figma.com/proto/lbNOfB0gafHczfqluE6mNZ/MV-GC-WORK?page-id=0%3A1&node-id=115-163985&node-type=frame&viewport=-3546%2C-10673%2C0.09&scaling=min-zoom&content-scaling=responsive&starting-point-node-id=115%3A163985&embed-host=share" loading="lazy" allowfullscreen ></iframe></div>
+                    <div class="right-column"><iframe width="100%" height="1000px" src="https://embed.figma.com/proto/lbNOfB0gafHczfqluE6mNZ/MV-GC-WORK?page-id=0%3A1&node-id=115-163985&node-type=frame&viewport=-3546%2C-10673%2C0.09&scaling=min-zoom&content-scaling=responsive&starting-point-node-id=115%3A163985&embed-host=share" loading="eager" allowfullscreen ></iframe></div>
                     <img src="GCassets/prototype.gif" alt="">
                 </div>
             </div>
@@ -280,7 +281,7 @@
                     The video tab on the team home page, marked by a red dot and banner, effectively drew attention as the main entry point. Although the Beta tag was well-placed, additional information could be helpful. Users suggested making the video tab the default, but further research was needed.</p>
                 <div class="gridLR" style="grid-template-columns: 1.5fr 1fr; gap: 2rem; margin-top: 1.5rem;">
                     <div>
-                        <iframe width="100%" height="840px" src="https://embed.figma.com/proto/lbNOfB0gafHczfqluE6mNZ/MV-GC-WORK?page-id=0%3A1&node-id=115-158833&node-type=frame&viewport=-3546%2C-10673%2C0.09&scaling=scale-down&content-scaling=responsive&starting-point-node-id=115%3A158833&embed-host=share" allowfullscreen></iframe>
+                        <iframe width="100%" height="840px" src="https://embed.figma.com/proto/lbNOfB0gafHczfqluE6mNZ/MV-GC-WORK?page-id=0%3A1&node-id=115-158833&node-type=frame&viewport=-3546%2C-10673%2C0.09&scaling=scale-down&content-scaling=responsive&starting-point-node-id=115%3A158833&embed-host=share" allowfullscreen loading="eager"></iframe>
                     </div>
                     <div>
                         <h2>Recommendations</h2>
@@ -468,7 +469,7 @@
                             <br></p>    
                     </div>
                     <div>
-                        <iframe width="100%" height="1000px" src="https://embed.figma.com/proto/lbNOfB0gafHczfqluE6mNZ/MV-GC-WORK?page-id=0%3A1&node-id=115-163985&node-type=frame&viewport=-3546%2C-10673%2C0.09&scaling=scale-down&content-scaling=responsive&starting-point-node-id=115%3A163985&embed-host=share"  allowfullscreen></iframe>
+                        <iframe width="100%" height="1000px" src="https://embed.figma.com/proto/lbNOfB0gafHczfqluE6mNZ/MV-GC-WORK?page-id=0%3A1&node-id=115-163985&node-type=frame&viewport=-3546%2C-10673%2C0.09&scaling=scale-down&content-scaling=responsive&starting-point-node-id=115%3A163985&embed-host=share" loading="eager" allowfullscreen></iframe>
                     </div>
                 </div>
             </div>
