--- a/freelance.html
+++ b/freelance.html
@@ -54,7 +54,7 @@
     
 
     <section id="section-1">
-        <div class="grid-container">
+        <div class="about-container" style="margin-top: 40px">
             <div>
                 <iframe width="100%" height="560px" style="border-radius: 32px; border: 12px solid #000000;" 
                 src="https://www.youtube.com/embed/wJwjln2grCE" 
@@ -109,7 +109,7 @@
                 <source src="assets/CCtransform.mp4" type="video/mp4" style="border: none; border-radius:24px">
             </video>
         </div>
-        <div class="grid-container" style="margin-top: 3rem;">
+        <div class="about-container" style="margin-top: 3rem;">
             <div>
                 <h1 class="grey-caps-label" style="margin-bottom: 0.5rem;">Testimonials</h1>
                 <h2>Client/Project: collegeconnected.com</h2>
