--- a/GC.html
+++ b/GC.html
@@ -56,11 +56,11 @@
     <ul class="menu">
       <!-- <li><a class="case-nav-links" href="index.html">Home</a></li> -->
       <!-- <li><a class="case-nav-links" href="index.html#hero">About</a></li> -->
-      <li><a class="case-nav-links" href="resume.html" target="_blank"></i>Resume <span style="font-family: 'beautiful freak';">↗</span></a></li>
+      <li><a class="case-nav-links" href="resume.html" target="_blank"></i>Resume</a></li>
       <li><a class="case-nav-links" href="#projects">Design Work</a></li>
       <li><a class="case-nav-links" href="freelance.html">Freelance Work</a></li>
       <li><a class="case-nav-links" href="mailto:madhav18897@utexas.edu">Contact</a></li>
-      <li style="margin: 0rem; margin:auto"><a class="social-icons" href="https://www.linkedin.com/in/madhav-varma/" target="_blank"><i class="fa-brands fa-linkedin fa-l"></i></a></li>
+      <li style="margin: 0rem; margin:auto"><a class="social-icons" href="https://www.linkedin.com/in/madhav-varma/" target="_blank"><i class="fa-brands fa-linkedin fa-m"></i></a></li>
     </ul>
 
 
@@ -86,7 +86,6 @@
     <div class="container">
         <div class="leftpanel">
             <div class="side-nav-list">
-                <h1 style="color: #121212; font-weight: bolder; font-size: 1.5rem;">Index</h1>
                 <a class="side-nav-list-item" href="#context">Context</a>
                 <a class="side-nav-list-item" href="#problem1">First Problem Statement </a>
                 <a class="side-nav-list-item" href="#usabilitytest1">Initial Usability Test</a>  
