--- a/WCWH.html
+++ b/WCWH.html
@@ -50,7 +50,7 @@
     <ul class="menu">
       <!-- <li><a class="case-nav-links" href="index.html">Home</a></li> -->
       <!-- <li><a class="case-nav-links" href="index.html#hero">About</a></li> -->
-      <li><a class="case-nav-links" href="resume.html" target="_blank"></i>Resume <span style="font-family: 'beautiful freak';">↗</span></a></li>
+      <li><a class="case-nav-links" href="resume.html" target="_blank"></i>Resume</a></li>
       <li><a class="case-nav-links" href="#projects">Design Work</a></li>
       <li><a class="case-nav-links" href="freelance.html">Freelance</a></li>
       <li><a class="case-nav-links" href="mailto:madhav18897@utexas.edu">Contact</a></li>
