--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                                 <a href="CDSS.html" style="text-decoration: none;"><h1 class="primarybtn" >Case Study<i class="fa-solid fa-arrow-right"></i></h1></a>
                             </div>
                         </div>          
-                        <img class="card-img" src="CDSSassets/CDSScover.svg" alt="" loading="lazy">
+                        <img class="card-img" src="assets/CDSS.svg" alt="" loading="lazy">
                     </div>
 
                     <div class="projectcard" id="ides">
